[package]
name = "intend_webhook"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
firestore = "0.45.0"
chrono = "0.4.40"
log = "0.4.20"
env_logger = "0.11.8"
futures = "0.3"
actix-cors = "0.7.0"
dotenv = "0.15"